# jiren

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.ja.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: release.yml
.github/workflows/: publish-python-package.yml  python-tests.yml
jiren/: __init__.py  cli.py  console.py  template.py  versions.py
src/jiren/: __init__.py  cli.py
tests/: test_cli.py  test_console.py  test_init.py  test_jiren.py  test_template.py  test_versions.py
