[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jiren"
version = "0.6.0"
description = "jinja2 template renderer"
authors = [
    { name = "Takahiro Yano", email = "speg03@gmail.com" },
]

readme = "README.md"
license = "MIT"

keywords = ["jinja2", "template", "render", "text", "preprocessing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = "~=3.7"
dependencies = [
    "jinja2~=3.0",
    "pyyaml~=6.0",
    "importlib-metadata>=1.4; python_version < '3.8'",
]

[project.optional-dependencies]
test = [
    "pytest~=7.1",
    "pytest-cov~=3.0",
]

[project.scripts]
jiren = "jiren.cli:main"

[project.urls]
homepage = "https://github.com/speg03/jiren"
repository = "https://github.com/speg03/jiren"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=jiren --cov-report=term-missing --cov-report=xml"
