[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jiren"
version = "0.7.2"
description = "jinja2 template renderer"
authors = [
    { name = "Takahiro Yano", email = "speg03@gmail.com" },
]

readme = "README.md"
license = "MIT"

keywords = ["jinja2", "template", "render", "text", "preprocessing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.7"
dependencies = [
    "jinja2>=2.11",
    "pyyaml>=5.3",
    "importlib-metadata>=1.4; python_version < '3.8'",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
jiren = "jiren.cli:main"

[project.urls]
Homepage = "https://github.com/speg03/jiren"
Repository = "https://github.com/speg03/jiren"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=jiren --cov-report=term-missing --cov-report=xml"
