[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "jiren"
description = "jinja2 template renderer"
authors = [{ name = "Takahiro Yano", email = "speg03@gmail.com" }]

readme = "README.md"
license = "MIT"

requires-python = ">=3.7"
keywords = ["jinja2", "template", "render", "text", "preprocessing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dynamic = ["version", "dependencies", "optional-dependencies"]

[project.scripts]
jiren = "jiren.cli:main"

[project.urls]
Homepage = "https://github.com/speg03/jiren"
Repository = "https://github.com/speg03/jiren"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/jiren/_version.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements/main.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
tests = ["requirements/tests.txt"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=jiren --cov-report=term-missing --cov-report=xml"
